<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_edit_bg">
    <RelativeLayout
        android:id="@+id/title_view"
        android:background="@color/tab_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_48">
        <TextView
            android:id="@+id/title_text"
            android:paddingLeft="@dimen/w_20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:text="@string/sos"
            android:textColor="@color/white"
            android:textSize="@dimen/f_23" />
        <TextView
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/w_20"
            android:clickable="false"
            android:text="@string/set"
            android:textColor="@color/sos_txt_color"
            android:textSize="@dimen/f_18" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view">
        <RelativeLayout
            android:id="@+id/layout_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/w_27"
            android:visibility="gone">
           <ImageView
                android:id="@+id/img_empty"
                android:layout_width="@dimen/w_112"
                android:layout_height="@dimen/w_112"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_sos_no_contacts"/>
          <TextView
                android:id="@+id/txt_empty"
                android:layout_width="@dimen/w_202"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_empty"
                android:layout_marginTop="@dimen/w_11"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:text="@string/recycle_list_empty"
                android:textSize="@dimen/f_14"
                android:textColor="@color/black99"/>
         </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/w_20"
            android:layout_marginLeft="@dimen/w_16"
            android:layout_marginRight="@dimen/w_16"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_import_contacts"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_59"
        android:layout_marginTop="@dimen/w_35"
        android:layout_below="@id/layout_content"
        android:background="@drawable/sos_btn_bg">
        <ImageView
            android:id="@+id/img_import_contacts"
            android:layout_width="@dimen/w_23"
            android:layout_height="@dimen/w_23"
            android:src="@mipmap/ic_import_contacts"
            android:layout_marginLeft="@dimen/w_20"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/txt_import_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_import_contacts"
            android:layout_marginLeft="@dimen/w_16"
            android:layout_centerVertical="true"
            android:text="@string/import_contacts"
            android:textSize="@dimen/f_16"
            android:textColor="@color/item_app_normal_color"/>
     </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_add_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_59"
        android:layout_below="@id/layout_import_contacts"
        android:layout_marginTop="@dimen/w_20"
        android:background="@drawable/sos_btn_bg">
        <ImageView
            android:id="@+id/img_add_contact"
            android:layout_width="@dimen/w_23"
            android:layout_height="@dimen/w_23"
            android:src="@mipmap/ic_add_contact"
            android:layout_marginLeft="@dimen/w_20"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/txt_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_add_contact"
            android:layout_marginLeft="@dimen/w_16"
            android:layout_centerVertical="true"
            android:text="@string/add_contact"
            android:textSize="@dimen/f_16"
            android:textColor="@color/sos_txt_add_contact_color"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/txt_sos_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/w_36"
        android:layout_marginLeft="@dimen/w_16"
        android:gravity="center_horizontal"
        android:text="@string/sos_introduce"
        android:textSize="@dimen/f_14"
        android:textColor="@color/sos_txt_notice_color"/>
</RelativeLayout>