<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_edit_bg">
    <RelativeLayout
        android:id="@+id/title_view"
        android:background="@color/tab_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_50">
        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/w_18">
            <ImageView
               android:src="@mipmap/path1232"
               android:id="@+id/back_icon"
               android:layout_width="@dimen/w_24"
               android:layout_height="@dimen/w_24"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/w_18">

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="@dimen/w_24"
                android:layout_height="@dimen/w_24"
                android:src="@mipmap/path1233" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view"
        android:paddingTop="@dimen/w_27"
        android:paddingBottom="@dimen/w_27"
        android:id="@+id/contact_detail_info_layout">
        <ImageView
            android:id="@+id/contact_detail_icon"
            android:layout_width="@dimen/w_110"
            android:layout_height="@dimen/w_110"
            android:layout_marginLeft="@dimen/w_18"
            android:src="@mipmap/group478"/>
        <TextView
            android:textSize="@dimen/f_24"
            android:text="@string/contact_detatil_name"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/contact_detail_icon"
            android:layout_marginTop="@dimen/w_9"
            android:layout_marginLeft="@dimen/w_18"
            android:id="@+id/contact_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/f_17"
            android:text="@string/contact_detatil_number"
            android:textColor="@color/black33"
            android:layout_toRightOf="@id/contact_detail_icon"
            android:layout_below="@id/contact_detail_name"
            android:layout_marginTop="@dimen/w_18"
            android:layout_marginLeft="@dimen/w_18"
            android:id="@+id/contact_detail_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact_detail_btn_layout"
        android:layout_below="@+id/contact_detail_info_layout"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/w_30"
        android:layout_height="wrap_content">
        <TextView
            android:background="@drawable/shape_normal"
            android:id="@+id/contact_detail_call_btn"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/w_18"
            android:text="@string/contact_detatil_call"
            android:textColor="@color/white"
            android:textSize="@dimen/f_24"
            android:gravity="center"
            android:layout_width="@dimen/w_194"
            android:layout_height="@dimen/w_60"/>
        <TextView
            android:background="@drawable/shape_sms_normal"
            android:id="@+id/contact_detail_sms_btn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/w_18"
            android:text="@string/contact_detatil_sms"
            android:textColor="@color/white"
            android:textSize="@dimen/f_24"
            android:gravity="center"
            android:layout_width="@dimen/w_120"
            android:layout_height="@dimen/w_60"/>
    </RelativeLayout>
    <!--<FrameLayout
        android:layout_marginTop="@dimen/w_10"
        android:id="@+id/calllog_list_container"
        android:layout_below="@id/contact_detail_btn_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>-->
    <RelativeLayout
       android:layout_marginTop="@dimen/w_10"
       android:layout_below="@id/contact_detail_btn_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
        <TextView
            android:id="@+id/contact_detail_recent_call_title"
            android:text="@string/contact_detatil_recent"
            android:layout_marginLeft="@dimen/w_18"
            android:textColor="@color/black"
            android:textSize="@dimen/f_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="@dimen/w_13"
            android:layout_below="@+id/contact_detail_recent_call_title"
            android:layout_marginRight="@dimen/w_18"
            android:layout_marginLeft="@dimen/w_18"
            android:id="@+id/rv_contact_calllog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/contact_detail_star_icon"
        android:layout_width="@dimen/w_40"
        android:layout_height="@dimen/w_40"
        android:layout_below="@+id/contact_detail_info_layout"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/w_18"
        android:layout_marginTop="-25dp"
        android:src="@mipmap/collection_normal"/>
</RelativeLayout>