<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/plan_shape"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/w_45"
        android:layout_height="@dimen/w_45"
        app:layout_constraintBottom_toBottomOf="@id/phone"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:srcCompat="@mipmap/ic_default_contact" />


    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="@dimen/w_36"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/w_16"
        android:layout_marginTop="@dimen/w_20"
        android:layout_marginRight="@dimen/w_16"
        android:hint="@string/name"
        android:maxLength="18"
        android:maxLines="1"
        android:padding="@dimen/w_8"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/w_13"
        android:theme="@style/MyEditText"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/w_36"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/w_16"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/w_16"
        android:hint="@string/telephone"
        android:inputType="number"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="@dimen/w_8"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/w_13"
        android:theme="@style/MyEditText"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintWidth_percent="0.6" />

    <ImageView
        android:id="@+id/contact"
        android:layout_width="@dimen/w_30"
        android:layout_height="@dimen/w_30"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/phone"
        app:layout_constraintRight_toRightOf="@+id/phone"
        app:layout_constraintTop_toTopOf="@id/phone"
        app:srcCompat="@mipmap/ic_home_contact" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/w_20"
        android:background="@color/splite_line"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/phone" />


    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/w_40"
        android:background="@drawable/button_plan_left_selector"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/w_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintWidth_percent="0.498" />

    <View
        android:layout_width="@dimen/widget_min_size_1"
        android:layout_height="@dimen/w_20"
        android:layout_gravity="center_vertical"
        android:background="@color/splite_line"
        app:layout_constraintBottom_toBottomOf="@id/confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/w_40"
        android:background="@drawable/button_plan_right_selector"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/w_15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintWidth_percent="0.498" />


</android.support.constraint.ConstraintLayout>