<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_edit_bg">

    <RelativeLayout
        android:id="@+id/title_view"
        android:background="@color/tab_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_48">
        <RelativeLayout
            android:id="@+id/layout_add_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/w_18"
            android:layout_alignParentLeft="true">
            <ImageView
                android:src="@mipmap/ic_import_back"
                android:id="@+id/back_icon"
                android:layout_width="@dimen/w_20"
                android:layout_height="@dimen/w_20"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/title_text"
            android:paddingLeft="@dimen/w_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_contact"
            android:textColor="@color/white"
            android:textSize="@dimen/f_22" />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/w_95"
        android:layout_height="@dimen/w_95"
        android:layout_below="@id/title_view"
        android:layout_centerHorizontal="true"
        android:id="@+id/add_contact_photo"
        android:src="@mipmap/group478"
        android:layout_marginTop="@dimen/w_18"/>

    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_below="@id/add_contact_photo"
        android:layout_marginTop="@dimen/w_11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:id="@+id/add_contact_name_icon"
            android:layout_width="@dimen/w_23"
            android:layout_height="@dimen/w_23"
            android:layout_marginLeft="@dimen/w_18"
            android:layout_marginTop="@dimen/w_16"
            android:src="@mipmap/mgroup73"/>
        <EditText
            android:singleLine="true"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColor="@color/black33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_contact_first_name"
            android:layout_marginTop="@dimen/w_11"
            android:background="@color/white"
            android:layout_toRightOf="@id/add_contact_name_icon"
            android:hint="@string/contact_add_name"
            android:textSize="@dimen/f_20"
            android:maxLength="12"
            android:textColorHint="#30333333"
            android:layout_marginLeft="@dimen/w_14"
            android:layout_marginRight="@dimen/w_18"/>

        <View
            android:layout_below="@id/add_contact_name_icon"
            android:layout_alignLeft="@id/add_contact_first_name"
            android:layout_alignRight="@id/add_contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/w_8"
            android:background="#ACACAC"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_below="@id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/w_18"
        android:background="@color/white">

        <ImageView
            android:id="@+id/add_contact_phone_icon"
            android:layout_width="@dimen/w_23"
            android:layout_height="@dimen/w_23"
            android:layout_marginLeft="@dimen/w_18"
            android:src="@mipmap/mgroup74"
            android:layout_marginTop="@dimen/w_16"/>

        <EditText
            android:singleLine="true"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:textColor="@color/black33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_contact_number"
            android:background="@color/white"
            android:layout_marginTop="@dimen/w_11"
            android:layout_toRightOf="@id/add_contact_phone_icon"
            android:hint="@string/phone_number"
            android:maxLength="20"
            android:textSize="@dimen/f_20"
            android:textColorHint="#30333333"
            android:layout_marginLeft="@dimen/w_14"
            android:layout_marginRight="@dimen/w_18"/>

        <View
            android:layout_below="@id/add_contact_phone_icon"
            android:layout_alignLeft="@id/add_contact_number"
            android:layout_alignRight="@id/add_contact_number"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/w_8"
            android:background="#ACACAC"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/w_60"
        android:id="@+id/add_contact_save"
        android:layout_below="@id/layout_phone"
        android:layout_marginLeft="@dimen/w_18"
        android:layout_marginRight="@dimen/w_18"
        android:background="@drawable/shape_sos_contact_item"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/f_35"
        android:layout_marginTop="@dimen/w_52"/>
</RelativeLayout>